# genanki-rs

./: Cargo.toml
src/: apkg_schema.rs  builtin_models.rs  card.rs  db_entries.rs  deck.rs  lib.rs  model.rs  note.rs  package.rs
