[package]
name = "genanki-rs"
version = "0.4.0"
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
edition = "2018"
description = "Crate to create decks for the open source flashcard platform Anki. Based on Python library genanki"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yannickfunk/genanki-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.10.0"
zip = "0.6.6"
serde_json = "1.0.113"
fancy-regex = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "0.14.0"
thiserror = "1.0.57"

[dev-dependencies]
anyhow = "1.0.79"
pyo3 = "0.20.2"
serial_test = "3.0.0"
uuid = { version = "1.7", features = ["v4"] }
